packages/build/tests/error/build/fixtures/exception_circular/plugin.js
module.exports = {
  async onPreBuild() {
    const error = new Error('test')
    error.self = error
    error.test = true
    error.nullProp = null
    error.objectProp = {}
    throw error
  },
}
